--- a/homepage.html
+++ b/homepage.html
@@ -163,7 +163,7 @@
             <br />
             Wood Wide Web inspires you to detach yourself from everything you
             know and get in touch with what you belong to: the Earth. Raise with
-            us a new way of living by joining the Fungi-centrism.
+            us a new way of living by joining the Fungicentrism.
           </p>
         </div>
       </section>
